--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "scripts": {
         "dev": "npm run development",
         "development": "mix && npm run ssr:build",
-        "fix:eslint": "eslint --ext .js,.vue resources/js/ --fix",
-        "fix:prettier": "prettier --write --loglevel warn 'resources/js/**/*.vue'",
+        "fix:eslint": "eslint --ext .ts,.vue resources/js/ --fix",
+        "fix:prettier": "prettier --write --loglevel warn ./resources/js/**/*.vue",
         "fix-code-style": "npm run fix:prettier && npm run fix:eslint",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
@@ -21,6 +21,10 @@
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/server": "^0.1.0",
         "@popperjs/core": "^2.11.0",
+        "@types/lodash": "^4.14.181",
+        "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.17.0",
+        "@typescript-eslint/parser": "^5.17.0",
         "@vue/server-renderer": "^3.2.27",
         "autoprefixer": "^10.4.0",
         "eslint": "^8.4.1",
@@ -33,6 +37,9 @@
         "prettier": "^2.5.1",
         "prettier-plugin-tailwind": "^2.2.12",
         "tailwindcss": "^2.0.3",
+        "ts-loader": "^9.2.8",
+        "tsconfig-paths-webpack-plugin": "^3.5.2",
+        "typescript": "^4.6.3",
         "uuid": "^8.3.2",
         "vue": "^3.2.27",
         "vue-loader": "^16.2.0",
