--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,14 @@
         "league/glide-laravel": "^1.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
+        "based/laravel-typescript": "^0.0.3",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10",
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
