--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "ts-loader": "^9.2.8",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "typescript": "^4.6.3",
+        "unplugin-vue-define-options": "^0.6.0",
         "uuid": "^8.3.2",
         "vue": "^3.2.27",
         "vue-loader": "^16.2.0",
